[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/Dialog/TermsDialog.gd" type="Script" id=1]
[ext_resource path="res://addons/Dialog/Graphics/cancel_button_normal.png" type="Texture" id=2]
[ext_resource path="res://addons/Dialog/Graphics/cancel_button_over.png" type="Texture" id=3]
[ext_resource path="res://addons/Dialog/Graphics/plus_button_normal.png" type="Texture" id=4]
[ext_resource path="res://addons/Dialog/Graphics/plus_button_over.png" type="Texture" id=5]
[ext_resource path="res://addons/Dialog/Graphics/minus_button_disabled.png" type="Texture" id=6]
[ext_resource path="res://addons/Dialog/Graphics/minus_button_normal.png" type="Texture" id=7]
[ext_resource path="res://addons/Dialog/Graphics/minus_button_over.png" type="Texture" id=8]
[ext_resource path="res://addons/Dialog/Fonts/NotoSansCJKtc-Regular.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.235294, 0.235294, 0.235294, 1 )
border_width_left = 2
border_width_top = 35
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=14]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 2.0
bg_color = Color( 0.168627, 0.145098, 0.145098, 0.52549 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0509804, 0.00392157, 0, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="TermsDialog" type="Panel"]
margin_right = 432.0
margin_bottom = 333.0
rect_min_size = Vector2( 432, 333 )
custom_styles/panel = SubResource( 13 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
resizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 425.0
margin_bottom = 36.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/margin_top = 2
custom_constants/margin_left = 10
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 2.0
margin_right = 425.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 379.0
margin_bottom = 32.0
rect_min_size = Vector2( 280, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Terms:"
valign = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 383.0
margin_right = 415.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "(ESC) Exit and Save terms."
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 425.0
margin_bottom = 333.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = -2
custom_constants/margin_top = 2
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 2.0
margin_right = 427.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 422.0
margin_bottom = 14.0
text = "Terms ID List:"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 422.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 13

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 136.0
margin_bottom = 268.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ItemList" type="ItemList" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 136.0
margin_bottom = 242.0
rect_min_size = Vector2( 100, 225 )
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 246.0
margin_right = 136.0
margin_bottom = 268.0
alignment = 2

[node name="AddTermButton" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 88.0
margin_right = 110.0
margin_bottom = 22.0
rect_min_size = Vector2( 22, 22 )
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="RemoveTermButton" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 114.0
margin_right = 136.0
margin_bottom = 22.0
rect_min_size = Vector2( 22, 22 )
focus_mode = 0
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 149.0
margin_right = 422.0
margin_bottom = 268.0
rect_min_size = Vector2( 200, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 273.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_top = 10.0
margin_right = 19.0
margin_bottom = 24.0
text = "ID:"

[node name="ITEMID" type="LineEdit" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 23.0
margin_right = 273.0
margin_bottom = 35.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 12 )
placeholder_text = "set id for term selected..."
caret_blink = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 39.0
margin_right = 273.0
margin_bottom = 268.0
rect_min_size = Vector2( 190, 222 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
custom_styles/panel = SubResource( 14 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer"]
margin_left = 6.0
margin_top = 2.0
margin_right = 267.0
margin_bottom = 228.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
follow_focus = true
scroll_horizontal_enabled = false

[node name="LanguageContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 261.0
margin_bottom = 226.0
rect_min_size = Vector2( 188, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
[connection signal="visibility_changed" from="." to="." method="_on_TermsDialog_visibility_changed"]
[connection signal="button_down" from="VBoxContainer/MarginContainer2/HBoxContainer/TextureButton" to="." method="hide"]
[connection signal="gui_input" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ItemList" to="." method="_on_ItemList_gui_input"]
[connection signal="item_selected" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="button_down" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/AddTermButton" to="." method="_on_AddTermButton_button_down"]
[connection signal="button_down" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/RemoveTermButton" to="." method="_on_RemoveTermButton_button_down"]
[connection signal="text_changed" from="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer/ITEMID" to="." method="_on_ITEMID_text_changed"]
